# spear-editor

./: .gitignore  CMakeLists.txt  README.md  todo.md
include/: piece_table.hpp
src/: CMakeLists.txt  main.cpp  piece_table.cpp
tests/: CMakeLists.txt  debug.cpp  test.txt  test2.txt  tests.cpp
